@@ -1,3 +1,7 @@
+2009-06-04	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* loopback/init.c: Add missing initializers.
+
 2009-04-28    Chris Johns <chrisj@rtems.org>
 
 	* iostream/system.h: Remove the Init prototype. Provide in
